k8s/controller-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: controller
  labels:
    app: controller
spec:
  replicas: 1
  selector:
    matchLabels:
      app: controller
  template:
    metadata:
      labels:
        app: controller
    spec:
      containers:
      - name: controller
        image: ghcr.io/cs-muic/scalable-p2-scalable-t3-bbq/controller:latest
        command: ["python"]
        args: ["backend.py"]
      imagePullSecrets:
        - name: myregistrykey
