k8s/controller-svc.yml
kind: Service
apiVersion: v1
metadata:
  name: controller
spec:
  selector:
    app: controller
  type: ClusterIP
  ports:
    - name: http
      port: 5000
      targetPort: 5000
